--- a/_layouts/distill.liquid
+++ b/_layouts/distill.liquid
@@ -29,7 +29,7 @@
   <d-front-matter>
     <script async type="text/json">
       {
-            "title": "{{ page.title }}",
+            "title": "{{ page.post_title }}",
             "description": "{{ page.description }}",
             "published": "{{ page.date | date: '%B %d, %Y' }}",
             "authors": [
@@ -71,7 +71,7 @@
     <!-- Content -->
     <div class="post distill">
       <d-title>
-        <h1>{{ page.title }}</h1>
+        <h1>{{ page.post_title }}</h1>
         <p>{{ page.description }}</p>
       </d-title>
       {% if page.authors %}
