--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -19,6 +19,7 @@
           {% else %}
             {{- site.title -}}
           {% endif %}
+          <img src="/assets/img/room1805_logo.png"/ width=9% >
         </a>
       {% elsif site.enable_navbar_social %}
         <!-- Social Icons -->
