--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -4,9 +4,10 @@ layout: default
 <div class="post">
   <header class="post-header">
     <h1 class="post-title">
+    <img src="assets/img/room1805_logo.png"/ width=7% style='padding-bottom:1rem;'>
       {% if site.title == 'blank' %}
-        <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
-        {{ site.last_name }}
+        <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} 
+        {{ site.last_name }} 
       {% else %}
         {{ site.title }}
       {% endif %}
